# pscm

./: CMakeLists.txt
test/r5rs/: r5rstest.scm
